# google-cloud-recipes

./: README.md
cloud-run-service-hello-world/: .gitignore  README.md
cloud-run-service-hello-world/api/: package-lock.json  package.json
invoice-management-system/: README.md
invoice-management-system/authorize-gmail-access-service/: .env.template  README.md  docker-compose.yaml  package-lock.json  package.json
invoice-management-system/invoices-management-app/: .env.template  package-lock.json  package.json
invoice-management-system/process-invoice-emails-cloud-function/: .env.template  Makefile  README.md  main.py  pyproject.toml  requirements.txt
invoice-management-system/process-invoice-emails-cloud-function/process_invoice_emails_cloud_function/: __init__.py  config.py
invoice-management-system/process-invoice-emails-cloud-function/process_invoice_emails_cloud_function/email_client/: email_client.py
invoice-management-system/process-invoice-emails-cloud-function/process_invoice_emails_cloud_function/invoice_emails_processor/: __init__.py  invoice_emails_processor.py
invoice-management-system/process-invoice-emails-cloud-function/process_invoice_emails_cloud_function/invoices/: invoice.py  invoice_status.py  invoices_client.py
invoice-management-system/process-invoice-emails-cloud-function/process_invoice_emails_cloud_function/vendors/: vendors_client.py
invoice-management-system/send-email-cloud-function/: .env.template  Makefile  README.md  config.py  main.py  pyproject.toml  requirements.txt
(+177 files in other folders)
